<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/result" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textName"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginStart="300dp"
                android:text="@string/Name"
                android:textAlignment="viewStart"
                android:textColor="#2A59A8"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:ems="10"
                android:hint="@string/kasun"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textsure"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginStart="300dp"
                android:text="@string/surename"
                android:textAlignment="viewStart"
                android:textColor="#2A59A8"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextsurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:ems="10"
                android:hint="@string/silva"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textviewid"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginStart="300dp"
                android:text="@string/subject"
                android:textAlignment="viewStart"
                android:textColor="#2A59A8"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextsubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:ems="10"
                android:hint="@string/maths"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginStart="300dp"
                android:text="@string/mark"
                android:textColor="#2A59A8"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:ems="10"
                android:hint="@string/marks"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idtext"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginStart="300dp"
                android:text="@string/id"
                android:textColor="#2A59A8"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:ems="10"
                android:hint="@string/id"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_marginStart="130dp"
                android:backgroundTint="#0C8349"
                android:text="@string/Save" />

            <Button
                android:id="@+id/btnView"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_marginStart="60dp"
                android:backgroundTint="#B86D0A"
                android:text="@string/view" />

            <Button
                android:id="@+id/updatebtn"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:backgroundTint="#2979FF"
                android:text="@string/update" />

            <Button
                android:id="@+id/deletebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>